# arcadia-slot-bot

./: .env.example  .gitignore  Dockerfile  README.md  data_campaign_6a26fc8012907abb71e8dcab.json  docker-compose.yml  pyproject.toml  railway.json  requirements.txt  run.ps1  run.sh  test_api.py  test_lock.py
app/: __init__.py  config.py  dependencies.py  main.py  models.py
app/api/: campaigns.py  dashboard.py  health.py  routes.py  slots.py
app/core/: __init__.py  browser_utils.py  circuit_breaker.py  notifier.py  scheduler.py  session_manager.py
app/services/: arcadia_client.py  campaign_monitor.py  slot_locker.py  telegram_bot.py
app/strategies/: __init__.py  ai_agent_strategy.py  api_strategy.py  base.py  playwright_strategy.py  strategy_router.py
docs/: DEPLOY.md  architecture.md
scripts/: debug_409.py  debug_playwright.py  setup_session.py  test_browser_launch.py  test_cookie_options.py  test_http_client.py  test_strategies.py  test_strategies_automated.py  watch_claim_slots.py
tests/: test_autolock.py
