[project]
name = "arcadia-slot-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiohttp>=3.11.10",
    "aioredis>=2.0.1",
    "apscheduler>=3.11.0",
    "browser-use>=0.1.40",
    "discord-webhook>=1.3.1",
    "fastapi[standard]>=0.137.0",
    "httpx[http2]>=0.27.2",
    "langchain-openai>=0.2.12",
    "openai>=1.57.0",
    "orjson>=3.10.12",
    "playwright>=1.49.0",
    "playwright-stealth==1.0.6",
    "prometheus-client>=0.21.1",
    "pydantic>=2.10.3",
    "pydantic-settings>=2.7.0",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.17",
    "python-telegram-bot>=21.9",
    "pyyaml>=6.0.2",
    "redis>=5.2.1",
    "setuptools<82",
    "structlog>=24.4.0",
    "tenacity>=9.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "pytest-asyncio>=1.4.0",
]
